# TorchSOM

./: .buildinfo  .changelog_templade.md  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENSE  Makefile  README.md  TODO.MD  changelog.html  codecov.yml  dev-requirements.txt  faq.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sonar-project.properties  sphinx-reading-durations.json  torchsom.html  troubleshooting.html
.doctrees/: index.doctree
.doctrees/additional_resources/: changelog.doctree  faq.doctree  troubleshooting.doctree
.doctrees/api/: configs.doctree  core.doctree  index.doctree  utils.doctree  visualization.doctree
.doctrees/getting_started/: basic_concepts.doctree  installation.doctree  quickstart.doctree
.doctrees/tutorials/: boston_housing.doctree  clustering_walkthrough.doctree  energy_efficiency.doctree  index.doctree  iris.doctree  wine.doctree
.doctrees/user_guide/: architecture.doctree  benchmarks.doctree  clustering.doctree  comparison.doctree  jitl.doctree  topologies.doctree  training.doctree  visualization_help.doctree
.github/workflows/: code-quality.yml  docs.yml  release.yml  run-test.yml  test.yml
TorchSOM/: __init__.py  core.py  plotting.py
_modules/: index.html
_modules/torchsom/: core.html  plotting.html  utils.html
_modules/torchsom/configs/: som_config.html
_modules/torchsom/core/: base_som.html  som.html
_modules/torchsom/utils/: grid.html  initialization.html  metrics.html  topology.html
_modules/torchsom/visualization/: base.html  config.html
_sources/: index.rst.txt  torchsom.rst.txt
_sources/additional_resources/: changelog.rst.txt  faq.rst.txt
_sources/api/: configs.rst.txt  utils.rst.txt  visualization.rst.txt
_sources/getting_started/: basic_concepts.rst.txt  installation.rst.txt
_sources/tutorials/: energy_efficiency.rst.txt  index.rst.txt
_sources/user_guide/: jitl.rst.txt  visualization_help.rst.txt
additional_resources/: changelog.html  faq.html  troubleshooting.html
api/: configs.html  core.html  index.html  utils.html  visualization.html
benchmark/: README.md  benchmark.ipynb  benchmark.py  run_all.sh  run_hexagonal.sh  run_rectangular.sh
benchmark/configs/: benchmark.yaml
data/: blobs_5000_4_3_1.0.csv
data/benchmark/: blobs_20000_300.csv  blobs_20000_4.csv  blobs_300_300.csv  blobs_300_4.csv  blobs_300_50.csv  blobs_5000_4.csv
data/notebooks/: wine.csv
docs/figures/: architecture.tex  topologies.tex
docs/source/: changelog.rst  conf.py  faq.rst  index.rst  modules.rst  torchsom.rst  troubleshooting.rst
docs/source/additional_resources/: changelog.rst  faq.rst  troubleshooting.rst
docs/source/api/: configs.rst  core.rst  index.rst  utils.rst  visualization.rst
docs/source/getting_started/: basic_concepts.rst  installation.rst  quickstart.rst
docs/source/tutorials/: boston_housing.rst  clustering_walkthrough.rst  iris.rst  wine.rst
docs/source/user_guide/: architecture.rst  benchmarks.rst  clustering.rst  comparison.rst  topologies.rst  training.rst  visualization_help.rst
getting_started/: basic_concepts.html  installation.html  quickstart.html
makefiles/: ci.mk  clean.mk  complexity.mk  docs.mk  format.mk  install.mk  lint.mk  release.mk  security.mk  test.mk
notebooks/: boston_housing.ipynb  clustering.ipynb  energy_efficiency.ipynb  get_data.ipynb  iris.ipynb  wine.ipynb
tests/: __init__.py  conftest.py
tests/fixtures/: data_generators.py  devices.py  markers.py  test_data.py
tests/integration/: test_training_workflows.py
tests/unit/: conftest.py  test_pbc.py  test_som.py
tests/unit/configs/: test_som_config.py
tests/unit/fixtures/: __init__.py  data.py  som_configs.py  som_instances.py  som_parameters.py
tests/unit/integration/: test_reproducibility.py
tests/unit/unit/: test_base_som.py  test_som.py
tests/unit/unit/configs/: test_som_config.py
tests/unit/unit/utils/: test_clustering.py  test_distances.py  test_grid.py  test_initialization.py  test_metrics.py
tests/unit/unit/visualization/: __init__.py  test_base.py
tests/unit/utils/: test_clustering.py  test_decay.py  test_grid.py  test_initialization.py  test_maps.py  test_metrics.py  test_neighborhood.py  test_search.py  test_topology.py
tests/unit/visualization/: test_config.py
torch_som/: core.py  distances.py  plotting.py
torchsom/: __init__.py  core.py  plotting.py  version.py
torchsom/archive/: __init__.py  neighborhood.py
torchsom/configs/: __init__.py  som_config.py
torchsom/core/: __init__.py  base_som.py  som.py
torchsom/utils/: __init__.py  clustering.py  decay.py  distances.py  grid.py  hexagonal_coordinates.py  initialization.py  maps.py  metrics.py  neighborhood.py  search.py  topology.py
torchsom/visualization/: __init__.py  base.py  base_visualizer.py  clustering.py  config.py  hexagonal.py  hexagonal_utils.py  rectangular.py
torchsom/visualization/core/: base_som.py  som.py
torchsom/visualization/utils/: initialization.py  maps.py
tutorials/: boston_housing.html  clustering_walkthrough.html  energy_efficiency.html  index.html  iris.html  wine.html
user_guide/: architecture.html  benchmarks.html  clustering.html  comparison.html  jitl.html  topologies.html  training.html  visualization_help.html
