[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-git-versioning"]

# ==================== Project Metadata ====================

[project]
name = "torchsom"
authors = [
    {name = "Louis Berthier", email = "louis-desire-romeo.berthier@michelin.com"},
]
maintainers = [
    {name = "Louis Berthier", email = "louis-desire-romeo.berthier@michelin.com"},
]
dynamic = ["version", "readme"]
description = "torchsom: The Reference PyTorch Library for Self-Organizing Maps"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "tqdm",
    "pydantic",
    "hdbscan",
    "scikit-learn",
]
keywords = [
    "Self-Organizing-Maps",
    "SOM",
    "PyTorch",
    "Machine-Learning",
    "Unsupervised-Learning",
    "Dimensionality-Reduction",
    "Clustering",
    "Data-Visualization",
    "Just-In-Time-Learning",
]

[project.urls]
Source = "https://github.com/michelin/torchsom"
Documentation = "https://opensource.michelin.io/TorchSOM/"
Tracker = "https://github.com/michelin/TorchSOM/issues"
License = "https://github.com/michelin/TorchSOM/blob/main/LICENSE"
Contributing = "https://github.com/michelin/TorchSOM/blob/main/CONTRIBUTING.md"
"Code of Conduct" = "https://github.com/michelin/TorchSOM/blob/main/CODE_OF_CONDUCT.md"
Citation = "https://github.com/michelin/TorchSOM/blob/main/CITATION.cff"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.dev{ccount}"
dirty_template = "{tag}.post{ccount}+dirty"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["torchsom*"]

# ==================== Optional Dependencies ====================

[project.optional-dependencies]
dev = [
    "pandas",
    "openpyxl",
    "rich",
    "typing_extensions",
    "notebook",
    "pyyaml",
    "pre-commit",
    "typer",
    "minisom>=2.3.6",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
    "pytest-timeout",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-autobuild",
    "interrogate",
]
faiss = [
    "faiss-cpu",
]
linting = [
    "ruff",
    "mypy",
    "radon",
]
release = [
    "build",
    "twine",
    "commitizen",
]
security = [
    "pip-audit",
]
all = [
    "torchsom[dev,tests,docs,faiss,linting,release,security]",
]

# ==================== Testing ====================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--durations=10",
    "--cov=torchsom",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-config=pyproject.toml",
    "--junit-xml=junit.xml",
    "-m", "unit or gpu",
    "--maxfail=0",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "gpu: Tests requiring GPU",
    "slow: Slow running tests",
    "smoke: Smoke tests for basic functionality",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
timeout = 300

[tool.coverage.run]
source = ["torchsom"]
omit = [
    "tests/**",
    "docs/**",
    "notebooks/**",
    "torchsom/core/base_som.py",
    "torchsom/core/growing/**",
    "torchsom/core/hierarchical/**",
    "torchsom/visualization/**",
    "torchsom/logger.py",
    "torchsom/version.py",
    "**/conftest.py",
    "**/__init__.py",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

# ==================== Ruff (lint + format) ====================
# Ruff replaces black, isort, flake8, bandit, and pyupgrade in a single tool.

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "ICN",  # flake8-import-conventions
    "S",    # flake8-bandit (security)
    "D",    # pydocstyle
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long -- formatter handles this
    "B008",   # function calls in defaults (common in pydantic)
    "C901",   # too complex
    "S101",   # assert usage -- needed in tests and fine in library
    "B904",   # exception re-raise
    "S311",   # pseudo-random generators -- acceptable for SOM init
    "SIM102", # nested if statements
    "D100",   # missing module docstring (handled by interrogate)
    "D104",   # missing public package docstring
    "B905",   # zip without an explicit 'strict=' parameter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["torchsom"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "SIM", "D"]

# ==================== Mypy ====================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disable_error_code = [
    "var-annotated",
    "operator",
    "no-any-return",
    "index",
    "unreachable",
    "call-arg",
    "arg-type",
    "assignment",
    "misc",
    "call-overload",
    "override",
    "no-untyped-call",
    "attr-defined",
    "union-attr",
]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "matplotlib.*",
    "tqdm.*",
    "torch.*",
    "numpy.*",
    "pydantic.*",
    "pytest.*",
    "yaml.*",
    "faiss.*",
    "hdbscan.*",
]
ignore_missing_imports = true

# ==================== Interrogate ====================

[tool.interrogate]
verbose = 1
ignore-init-method = true
ignore-magic = true
ignore-module = true
fail-under = 80
color = true
omit-covered-files = true
path = ["torchsom"]

# ==================== Commitizen ====================

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
tag_format = "v$version"
bump_map = { "feat" = "minor", "fix" = "patch", "chore" = "patch", "refactor" = "patch", "docs" = "patch" }
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
changelog_template = ".changelog_template.md"
github_url = "https://github.com/michelin/TorchSOM"
version_scheme = "semver"
changelog_start_rev = "v1.0.0"

# ==================== Sphinx ====================

[tool.sphinx]
suppress-warnings = ["misc.docutils"]
